Fill lists with content copy content from previous page TODO update links

--- a/site/start-project.html
+++ b/site/start-project.html
@@ -1,17 +1,34 @@
-<section class="text-center" id="submit-your-project">
+<section class="" id="submit-your-project">
     <div class="bs4-container">
-        <div class="section-title">
+        <div class="section-title bs4-mb-2">
             <div class="bs4-h1">Sumbit your project</div>
         </div>
 
-        <div class="bs4-card-deck">
+        <div class="bs4-card-group">
             <div class="bs4-card" id="dfg-project-card">
                 <div class="bs4-card-header bs4-h2">DFG-funded NGS project</div>
 
                 <ul class="bs4-list-group bs4-list-group-flush">
-                    <li class="bs4-list-group-item">Cras justo odio</li>
-                    <li class="bs4-list-group-item">Dapibus ac facilisis in</li>
-                    <li class="bs4-list-group-item">Vestibulum at eros</li>
+                    <li class="bs4-list-group-item">Collect <a href="#basicinfo">basic project information</a></li>
+                    <li class="bs4-list-group-item"><a
+                            href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/contact-us#contact">Contact </a>
+                        us and get counselling</li>
+                    <li class="bs4-list-group-item">Fill out the <a
+                            href="https://www.dfg.de/download/pdf/foerderung/info_wissenschaft/2019/doi_sequencing_costs.pdf"
+                            target="_blank">Declaration of Intent</a> and submit it to the <a
+                            href="mailto:WGI-NGS@dfg.de">DFG</a></li>
+                    <li class="bs4-list-group-item">Register to <a href="https://elan.dfg.de/my.policy"
+                            target="_blank">DFG Portal</a></li>
+                    <li class="bs4-list-group-item"><a
+                            href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/contact-us#contact">Contact </a>
+                        NCCT and discuss pre-filled counseling report</li>
+                    <li class="bs4-list-group-item">Send full application to DFG including the counselling report</li>
+                    <li class="bs4-list-group-item">Await DFG approval</li>
+                    <li class="bs4-list-group-item">Submit the <a
+                            href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/downloads#protocols">sample
+                            sheet</a> to us</li>
+                    <li class="bs4-list-group-item">Await sequencing</li>
+                    <li class="bs4-list-group-item">Access results via portal</li>
                 </ul>
             </div>
 
@@ -19,9 +36,18 @@
                 <div class="bs4-card-header bs4-h2">Regular NGS project</div>
 
                 <ul class="bs4-list-group bs4-list-group-flush">
-                    <li class="bs4-list-group-item">Cras justo odio</li>
-                    <li class="bs4-list-group-item">Dapibus ac facilisis in</li>
-                    <li class="bs4-list-group-item">Vestibulum at eros</li>
+                    <li class="bs4-list-group-item">Collect <a href="#basicinfo">basic project information</a></li>
+                    <li class="bs4-list-group-item"><a
+                            href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/contact-us#contact">Contact </a>
+                        us and get counselling</li>
+                    <li class="bs4-list-group-item">Request offer</li>
+                    <li class="bs4-list-group-item">Sign offer and send it back to us</li>
+                    <li class="bs4-list-group-item">Submit the <a
+                            href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/downloads#protocols">sample
+                            sheet</a> to us</li>
+                    <li class="bs4-list-group-item">Await sequencing analysis</li>
+                    <li class="bs4-list-group-item">Access results via portal</li>
+                    <li class="bs4-list-group-item">Process invoice</li>
                 </ul>
             </div>
 
@@ -29,9 +55,14 @@
                 <div class="bs4-card-header bs4-h2">What we need from you</div>
 
                 <ul class="bs4-list-group bs4-list-group-flush">
-                    <li class="bs4-list-group-item">Cras justo odio</li>
-                    <li class="bs4-list-group-item">Dapibus ac facilisis in</li>
-                    <li class="bs4-list-group-item">Vestibulum at eros</li>
+                    <li class="bs4-list-group-item">Project aim</li>
+                    <li class="bs4-list-group-item">Number of samples</li>
+                    <li class="bs4-list-group-item">Number of replicates</li>
+                    <li class="bs4-list-group-item">Sample type (library, DNA/RNA, blood, stool,...)</li>
+                    <li class="bs4-list-group-item">Technology (Illumina/Pacbio/Nanopore/10x)</li>
+                    <li class="bs4-list-group-item">Application (WGS, exome,&nbsp;metagenome,...)</li>
+                    <li class="bs4-list-group-item">Sequencing&nbsp;depth (coverage or output in Gb/sample or Mio Reads/sample)</li>
+                    <li class="bs4-list-group-item">Bioinformatics needed? If yes, how much support?</li>
                 </ul>
             </div>
         </div>
