--- a/snippets/borderless-definition-table.html
+++ b/snippets/borderless-definition-table.html
@@ -6,7 +6,7 @@
 
     <div class="bs4-container bs4-table-responsive-sm">
       <table
-        class="bs4-table bs4-table-borderless custom-table-borderless-content custom-table-borderless-striped"
+        class="bs4-table bs4-table-borderless impressum-table impressum-table-striped"
       >
         <tbody>
           <tr>
