combine project types in one list remove separate lists add list with items for both project types change needed information into questions

--- a/site/start-project.html
+++ b/site/start-project.html
@@ -3,67 +3,51 @@
         <div class="section-title bs4-mb-2">
             <div class="bs4-h1">Sumbit your project</div>
         </div>
+        <div class="row">
+            <div class="bs4-card-column">
+                <div class="bs4-card" id="project-submission-card">
+                    <div class="bs4-card-header bs4-h2">Project Submission</div>
+                    <ul class="bs4-list-group bs4-list-group-flush">
+                        <li class="bs4-list-group-item">
+                            collect basic project information
+                        </li>
+                        <li class="bs4-list-group-item">
+                            contact us and receive counselling
+                        </li>
+                        <li class="bs4-list-group-item dfg-only">fill out a Declaration of Intent</li>
+                        <li class="bs4-list-group-item dfg-only">submit the Declaration of Intent to the DFG</li>
+                        <li class="bs4-list-group-item dfg-only">register to the DFG portal</li>
+                        <li class="bs4-list-group-item dfg-only">contact the NCCT and discuss the pre-filled counselling report</li>
+                        <li class="bs4-list-group-item dfg-only">send a full application to the DFG including the counselling report</li>
+                        <li class="bs4-list-group-item dfg-only">await approval by the DFG</li>
 
-        <div class="bs4-card-group">
-            <div class="bs4-card" id="dfg-project-card">
-                <div class="bs4-card-header bs4-h2">DFG-funded NGS project</div>
+                        <li class="bs4-list-group-item no-dfg-only">request an offer from us</li>
+                        <li class="bs4-list-group-item no-dfg-only">sign the offer and send it back</li>
+                        
+                        <li class="bs4-list-group-item">
+                            submit the filled sample sheet to us</li>
+                        <li class="bs4-list-group-item">
+                            await sequencing analysis by us</li>
+                        <li class="bs4-list-group-item">
+                            access the results via our portal</li>
+                        <li class="bs4-list-group-item no-dfg-only">process the invoice you recieve from us</li>
+                    </ul>
+                    <div class="bs4-card-footer">send us your feedback</div>
+                </div>
+                <div class="bs4-card" id="basic-project-information-card">
+                    <div class="bs4-card-header bs4-h2">Questions from us to you:</div>
 
-                <ul class="bs4-list-group bs4-list-group-flush">
-                    <li class="bs4-list-group-item">Collect <a href="#basicinfo">basic project information</a></li>
-                    <li class="bs4-list-group-item"><a
-                            href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/contact-us#contact">Contact </a>
-                        us and get counselling</li>
-                    <li class="bs4-list-group-item">Fill out the <a
-                            href="https://www.dfg.de/download/pdf/foerderung/info_wissenschaft/2019/doi_sequencing_costs.pdf"
-                            target="_blank">Declaration of Intent</a> and submit it to the <a
-                            href="mailto:WGI-NGS@dfg.de">DFG</a></li>
-                    <li class="bs4-list-group-item">Register to <a href="https://elan.dfg.de/my.policy"
-                            target="_blank">DFG Portal</a></li>
-                    <li class="bs4-list-group-item"><a
-                            href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/contact-us#contact">Contact </a>
-                        NCCT and discuss pre-filled counseling report</li>
-                    <li class="bs4-list-group-item">Send full application to DFG including the counselling report</li>
-                    <li class="bs4-list-group-item">Await DFG approval</li>
-                    <li class="bs4-list-group-item">Submit the <a
-                            href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/downloads#protocols">sample
-                            sheet</a> to us</li>
-                    <li class="bs4-list-group-item">Await sequencing</li>
-                    <li class="bs4-list-group-item">Access results via portal</li>
-                </ul>
-            </div>
-
-            <div class="bs4-card" id="regular-project-card">
-                <div class="bs4-card-header bs4-h2">Regular NGS project</div>
-
-                <ul class="bs4-list-group bs4-list-group-flush">
-                    <li class="bs4-list-group-item">Collect <a href="#basicinfo">basic project information</a></li>
-                    <li class="bs4-list-group-item"><a
-                            href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/contact-us#contact">Contact </a>
-                        us and get counselling</li>
-                    <li class="bs4-list-group-item">Request offer</li>
-                    <li class="bs4-list-group-item">Sign offer and send it back to us</li>
-                    <li class="bs4-list-group-item">Submit the <a
-                            href="https://portal-testing.qbic.uni-tuebingen.de/web/ncct/downloads#protocols">sample
-                            sheet</a> to us</li>
-                    <li class="bs4-list-group-item">Await sequencing analysis</li>
-                    <li class="bs4-list-group-item">Access results via portal</li>
-                    <li class="bs4-list-group-item">Process invoice</li>
-                </ul>
-            </div>
-
-            <div class="bs4-card" id="basic-project-information-card">
-                <div class="bs4-card-header bs4-h2">What we need from you</div>
-
-                <ul class="bs4-list-group bs4-list-group-flush">
-                    <li class="bs4-list-group-item">Project aim</li>
-                    <li class="bs4-list-group-item">Number of samples</li>
-                    <li class="bs4-list-group-item">Number of replicates</li>
-                    <li class="bs4-list-group-item">Sample type (library, DNA/RNA, blood, stool,...)</li>
-                    <li class="bs4-list-group-item">Technology (Illumina/Pacbio/Nanopore/10x)</li>
-                    <li class="bs4-list-group-item">Application (WGS, exome,&nbsp;metagenome,...)</li>
-                    <li class="bs4-list-group-item">Sequencing&nbsp;depth (coverage or output in Gb/sample or Mio Reads/sample)</li>
-                    <li class="bs4-list-group-item">Bioinformatics needed? If yes, how much support?</li>
-                </ul>
+                    <ul class="bs4-list-group bs4-list-group-flush">
+                        <li class="bs4-list-group-item">What is the aim of your project?</li>
+                        <li class="bs4-list-group-item">How many samples do you have?</li>
+                        <li class="bs4-list-group-item">How many replicates are planned?</li>
+                        <li class="bs4-list-group-item">What is your sample type? (e.g. library, DNA/RNA, blood, stool,...)</li>
+                        <li class="bs4-list-group-item">Which technology should be used? (e.g. Illumina/Pacbio/Nanopore/10x)</li>
+                        <li class="bs4-list-group-item">How do you plan to apply the sequenced data? (e.g. WGS, exome,&nbsp;metagenome,...)</li>
+                        <li class="bs4-list-group-item">What is the desired sequencing depth? (coverage or output in Gb/sample or Mio Reads/sample)</li>
+                        <li class="bs4-list-group-item">Is bioinformatics analysis needed? If yes, to what degree?</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
