--- a/site/start-project.html
+++ b/site/start-project.html
@@ -6,7 +6,9 @@
         <div class="row">
             <div class="bs4-card-column">
                 <div class="bs4-card" id="project-submission-card">
-                    <div class="bs4-card-header bs4-h2">Project Submission</div>
+                    <div class="bs4-card-header">
+                        <div class="bs4-card-header bs4-h2">Project Submission</div>
+                    </div>
                     <ul class="bs4-list-group bs4-list-group-flush">
                         <li class="bs4-list-group-item">
                             collect basic project information
@@ -17,13 +19,15 @@
                         <li class="bs4-list-group-item dfg-only">fill out a Declaration of Intent</li>
                         <li class="bs4-list-group-item dfg-only">submit the Declaration of Intent to the DFG</li>
                         <li class="bs4-list-group-item dfg-only">register to the DFG portal</li>
-                        <li class="bs4-list-group-item dfg-only">contact the NCCT and discuss the pre-filled counselling report</li>
-                        <li class="bs4-list-group-item dfg-only">send a full application to the DFG including the counselling report</li>
+                        <li class="bs4-list-group-item dfg-only">contact the NCCT and discuss the pre-filled counselling
+                            report</li>
+                        <li class="bs4-list-group-item dfg-only">send a full application to the DFG including the
+                            counselling report</li>
                         <li class="bs4-list-group-item dfg-only">await approval by the DFG</li>
 
                         <li class="bs4-list-group-item no-dfg-only">request an offer from us</li>
                         <li class="bs4-list-group-item no-dfg-only">sign the offer and send it back</li>
-                        
+
                         <li class="bs4-list-group-item">
                             submit the filled sample sheet to us</li>
                         <li class="bs4-list-group-item">
@@ -41,10 +45,14 @@
                         <li class="bs4-list-group-item">What is the aim of your project?</li>
                         <li class="bs4-list-group-item">How many samples do you have?</li>
                         <li class="bs4-list-group-item">How many replicates are planned?</li>
-                        <li class="bs4-list-group-item">What is your sample type? (e.g. library, DNA/RNA, blood, stool,...)</li>
-                        <li class="bs4-list-group-item">Which technology should be used? (e.g. Illumina/Pacbio/Nanopore/10x)</li>
-                        <li class="bs4-list-group-item">How do you plan to apply the sequenced data? (e.g. WGS, exome,&nbsp;metagenome,...)</li>
-                        <li class="bs4-list-group-item">What is the desired sequencing depth? (coverage or output in Gb/sample or Mio Reads/sample)</li>
+                        <li class="bs4-list-group-item">What is your sample type? (e.g. library, DNA/RNA, blood,
+                            stool,...)</li>
+                        <li class="bs4-list-group-item">Which technology should be used? (e.g.
+                            Illumina/Pacbio/Nanopore/10x)</li>
+                        <li class="bs4-list-group-item">How do you plan to apply the sequenced data? (e.g. WGS,
+                            exome,&nbsp;metagenome,...)</li>
+                        <li class="bs4-list-group-item">What is the desired sequencing depth? (coverage or output in
+                            Gb/sample or Mio Reads/sample)</li>
                         <li class="bs4-list-group-item">Is bioinformatics analysis needed? If yes, to what degree?</li>
                     </ul>
                 </div>
