--- a/snippets/slide.html
+++ b/snippets/slide.html
@@ -1,10 +1,10 @@
-<div class="bs4-container-fluid bs4-slide">
-    <div class="bs4-slide-content">
-    <h1 class="bs4-slide-title text-center"> Lorem ipsum dolor sit amet.</h1>
+<div class="bs4-container-fluid slide-panel">
+    <div class="slide-panel-content">
+    <h1 class="slide-panel-title bs4-text-left bs4-mb-5"> Lorem ipsum dolor sit amet.</h1>
     
-    <div class="bs4-slide-text text-center">
+    <div class="slide-panel-text bs4-text-center">
     <h3>At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea </h3>
     </div>
     </div>
     </div>
-    
+   
