--- a/site/start-project.html
+++ b/site/start-project.html
@@ -1,61 +1,72 @@
-<section class="" id="submit-your-project">
+<section class="" id="project-submission">
+    <input type="checkbox" class="switch" id="dfg-switch" name="dfg-switch">
     <div class="bs4-container">
-        <div class="section-title bs4-mb-2">
-            <div class="bs4-h1">Sumbit your project</div>
-        </div>
-        <div class="row">
-            <div class="bs4-card-column">
-                <div class="bs4-card" id="project-submission-card">
-                    <div class="bs4-card-header">
-                        <div class="bs4-card-header bs4-h2">Project Submission</div>
+        <div class="bs4-row">
+            <div class="bs4-col-8 bs4-offset-2">
+                <div class="section-title">
+                    <div class="bs4-h1">Project Submission</div>
+                    <div class="bs4-d-flex bs4-justify-content bs4-align-items-center">
+                        <div class="bs4-h2 switch-label bs4-rounded-lg dfg-only-highlight">regular project</div>
+                        <div class="switch-container">
+                            <label class="switch" for="dfg-switch">
+                                <span class="slider bs4-rounded-lg"></span>
+                            </label>
+                        </div>
+                        <div class="bs4-h2 switch-label bs4-rounded-lg no-dfg-only-highlight">DFG project</div>
                     </div>
-                    <ul class="bs4-list-group bs4-list-group-flush">
-                        <li class="bs4-list-group-item">
-                            collect basic project information
-                        </li>
-                        <li class="bs4-list-group-item">
-                            contact us and receive counselling
-                        </li>
-                        <li class="bs4-list-group-item dfg-only">fill out a Declaration of Intent</li>
-                        <li class="bs4-list-group-item dfg-only">submit the Declaration of Intent to the DFG</li>
-                        <li class="bs4-list-group-item dfg-only">register to the DFG portal</li>
-                        <li class="bs4-list-group-item dfg-only">contact the NCCT and discuss the pre-filled counselling
-                            report</li>
-                        <li class="bs4-list-group-item dfg-only">send a full application to the DFG including the
-                            counselling report</li>
-                        <li class="bs4-list-group-item dfg-only">await approval by the DFG</li>
-
-                        <li class="bs4-list-group-item no-dfg-only">request an offer from us</li>
-                        <li class="bs4-list-group-item no-dfg-only">sign the offer and send it back</li>
-
-                        <li class="bs4-list-group-item">
-                            submit the filled sample sheet to us</li>
-                        <li class="bs4-list-group-item">
-                            await sequencing analysis by us</li>
-                        <li class="bs4-list-group-item">
-                            access the results via our portal</li>
-                        <li class="bs4-list-group-item no-dfg-only">process the invoice you recieve from us</li>
-                    </ul>
-                    <div class="bs4-card-footer">send us your feedback</div>
                 </div>
-                <div class="bs4-card" id="basic-project-information-card">
-                    <div class="bs4-card-header bs4-h2">Questions from us to you:</div>
+                <ol class="bs4-list-group">
+                    <li class="bs4-list-group-item">
+                        collect basic project information
+                    </li>
+                    <li class="bs4-list-group-item">
+                        contact us and receive counselling
+                    </li>
+                    <li class="bs4-list-group-item dfg-only-display">fill out a Declaration of Intent</li>
+                    <li class="bs4-list-group-item dfg-only-display">submit the Declaration of Intent to the DFG</li>
+                    <li class="bs4-list-group-item dfg-only-display">register to the DFG portal</li>
+                    <li class="bs4-list-group-item dfg-only-display">contact the NCCT and discuss the pre-filled counselling
+                        report</li>
+                    <li class="bs4-list-group-item dfg-only-display">send a full application to the DFG including the
+                        counselling report</li>
+                    <li class="bs4-list-group-item dfg-only-display">await approval by the DFG</li>
 
-                    <ul class="bs4-list-group bs4-list-group-flush">
-                        <li class="bs4-list-group-item">What is the aim of your project?</li>
-                        <li class="bs4-list-group-item">How many samples do you have?</li>
-                        <li class="bs4-list-group-item">How many replicates are planned?</li>
-                        <li class="bs4-list-group-item">What is your sample type? (e.g. library, DNA/RNA, blood,
-                            stool,...)</li>
-                        <li class="bs4-list-group-item">Which technology should be used? (e.g.
-                            Illumina/Pacbio/Nanopore/10x)</li>
-                        <li class="bs4-list-group-item">How do you plan to apply the sequenced data? (e.g. WGS,
-                            exome,&nbsp;metagenome,...)</li>
-                        <li class="bs4-list-group-item">What is the desired sequencing depth? (coverage or output in
-                            Gb/sample or Mio Reads/sample)</li>
-                        <li class="bs4-list-group-item">Is bioinformatics analysis needed? If yes, to what degree?</li>
-                    </ul>
-                </div>
+                    <li class="bs4-list-group-item no-dfg-only-display">request an offer from us</li>
+                    <li class="bs4-list-group-item no-dfg-only-display">sign the offer and send it back</li>
+
+                    <li class="bs4-list-group-item">
+                        submit the filled sample sheet to us</li>
+                    <li class="bs4-list-group-item">
+                        await sequencing analysis by us</li>
+                    <li class="bs4-list-group-item">
+                        access the results via our portal</li>
+                    <li class="bs4-list-group-item no-dfg-only-display">process the invoice you recieve from us</li>
+                    <li class="bs4-list-group-item">
+                        send us your feedback</li>
+                </ol>
+            </div>
+        </div>
+    </div>
+</section>
+<section class="" id="project-questions">
+    <div class="bs4-container">
+        <div class="bs4-row">
+            <div class="bs4-col-8 bs4-offset-2">
+                <div class="bs4-h1 section-title">Questions we will ask you:</div>
+                <ul class="bs4-list-group">
+                    <li class="bs4-list-group-item">What is the aim of your project?</li>
+                    <li class="bs4-list-group-item">How many samples do you have?</li>
+                    <li class="bs4-list-group-item">How many replicates are planned?</li>
+                    <li class="bs4-list-group-item">What is your sample type? (e.g. library, DNA/RNA, blood,
+                        stool,...)</li>
+                    <li class="bs4-list-group-item">Which technology should be used? (e.g.
+                        Illumina/Pacbio/Nanopore/10x)</li>
+                    <li class="bs4-list-group-item">How do you plan to apply the sequenced data? (e.g. WGS,
+                        exome,&nbsp;metagenome,...)</li>
+                    <li class="bs4-list-group-item">What is the desired sequencing depth? (coverage or output in
+                        Gb/sample or Mio Reads/sample)</li>
+                    <li class="bs4-list-group-item">Is bioinformatics analysis needed? If yes, to what degree?</li>
+                </ul>
             </div>
         </div>
     </div>
