--- a/site/start-project.html
+++ b/site/start-project.html
@@ -6,13 +6,17 @@
                 <div class="section-title">
                     <div class="bs4-h1">Project Submission</div>
                     <div class="bs4-d-flex bs4-justify-content bs4-align-items-center">
-                        <div class="bs4-h2 switch-label bs4-rounded-lg dfg-only-highlight">regular project</div>
+                        <div class="">
+                            <label for="dfg-switch" class="bs4-h2 switch-label bs4-rounded-lg dfg-only-highlight">regular project</label> 
+                        </div>
                         <div class="switch-container">
                             <label class="switch" for="dfg-switch">
                                 <span class="slider bs4-rounded-lg"></span>
                             </label>
                         </div>
-                        <div class="bs4-h2 switch-label bs4-rounded-lg no-dfg-only-highlight">DFG project</div>
+                        <div class="">
+                            <label for="dfg-switch" class="bs4-h2 switch-label bs4-rounded-lg no-dfg-only-highlight">DFG project</label> 
+                        </div>
                     </div>
                 </div>
                 <ol class="bs4-list-group">
