reorder HTML DOM and style changes

--- a/site/start-project.html
+++ b/site/start-project.html
@@ -6,18 +6,20 @@
                 <div class="section-title">
                     <div class="bs4-h1">Project Submission</div>
                     <div class="bs4-d-flex bs4-justify-content bs4-align-items-center">
-                        <div class="">
-                            <label for="dfg-switch" class="bs4-h2 switch-label bs4-rounded-lg dfg-only-highlight">regular project</label> 
-                        </div>
-                        <div class="switch-container">
-                            <label class="switch" for="dfg-switch">
+                        <label for="dfg-switch" class="bs4-d-flex bs4-align-items-center">
+
+                            <div class="switch-label bs4-rounded-lg dfg-only-highlight">
+                                regular project
+                            </div>
+                            <div class="switch switch-container">
                                 <span class="slider bs4-rounded-lg"></span>
-                            </label>
-                        </div>
-                        <div class="">
-                            <label for="dfg-switch" class="bs4-h2 switch-label bs4-rounded-lg no-dfg-only-highlight">DFG project</label> 
-                        </div>
+                            </div>
+                            <div class="switch-label bs4-rounded-lg no-dfg-only-highlight">
+                                DFG project
+                            </div>
+                        </label>
                     </div>
+
                 </div>
                 <ol class="bs4-list-group">
                     <li class="bs4-list-group-item">
@@ -29,7 +31,8 @@
                     <li class="bs4-list-group-item dfg-only-display">fill out a Declaration of Intent</li>
                     <li class="bs4-list-group-item dfg-only-display">submit the Declaration of Intent to the DFG</li>
                     <li class="bs4-list-group-item dfg-only-display">register to the DFG portal</li>
-                    <li class="bs4-list-group-item dfg-only-display">contact the NCCT and discuss the pre-filled counselling
+                    <li class="bs4-list-group-item dfg-only-display">contact the NCCT and discuss the pre-filled
+                        counselling
                         report</li>
                     <li class="bs4-list-group-item dfg-only-display">send a full application to the DFG including the
                         counselling report</li>
