--- a/site/start-project.html
+++ b/site/start-project.html
@@ -28,28 +28,47 @@
                     <li class="bs4-list-group-item">
                         contact us and receive counselling
                     </li>
-                    <li class="bs4-list-group-item dfg-only-display">fill out a Declaration of Intent</li>
-                    <li class="bs4-list-group-item dfg-only-display">submit the Declaration of Intent to the DFG</li>
-                    <li class="bs4-list-group-item dfg-only-display">register to the DFG portal</li>
-                    <li class="bs4-list-group-item dfg-only-display">contact the NCCT and discuss the pre-filled
-                        counselling
-                        report</li>
-                    <li class="bs4-list-group-item dfg-only-display">send a full application to the DFG including the
-                        counselling report</li>
-                    <li class="bs4-list-group-item dfg-only-display">await approval by the DFG</li>
+                    <li class="bs4-list-group-item dfg-only-display">
+                        fill out a Declaration of Intent
+                    </li>
+                    <li class="bs4-list-group-item dfg-only-display">
+                        submit the Declaration of Intent to the DFG
+                    </li>
+                    <li class="bs4-list-group-item dfg-only-display">
+                        register to the DFG portal
+                    </li>
+                    <li class="bs4-list-group-item dfg-only-display">
+                        contact the NCCT and discuss the pre-filled counselling report
+                    </li>
+                    <li class="bs4-list-group-item dfg-only-display">
+                        send a full application to the DFG including thecounselling report
+                    </li>
+                    <li class="bs4-list-group-item dfg-only-display">
+                        await approval by the DFG
+                    </li>
 
-                    <li class="bs4-list-group-item no-dfg-only-display">request an offer from us</li>
-                    <li class="bs4-list-group-item no-dfg-only-display">sign the offer and send it back</li>
+                    <li class="bs4-list-group-item no-dfg-only-display">
+                        request an offer from us
+                    </li>
+                    <li class="bs4-list-group-item no-dfg-only-display">
+                        sign the offer and send it back
+                    </li>
 
                     <li class="bs4-list-group-item">
-                        submit the filled sample sheet to us</li>
+                        submit the filled sample sheet to us
+                    </li>
                     <li class="bs4-list-group-item">
-                        await sequencing analysis by us</li>
+                        await sequencing analysis by us
+                    </li>
                     <li class="bs4-list-group-item">
-                        access the results via our portal</li>
-                    <li class="bs4-list-group-item no-dfg-only-display">process the invoice you recieve from us</li>
+                        access the results via our portal
+                    </li>
+                    <li class="bs4-list-group-item no-dfg-only-display">
+                        process the invoice you recieve from us
+                    </li>
                     <li class="bs4-list-group-item">
-                        send us your feedback</li>
+                        send us your feedback
+                    </li>
                 </ol>
             </div>
         </div>
@@ -61,18 +80,29 @@
             <div class="bs4-col-8 bs4-offset-2">
                 <div class="bs4-h1 section-title">Questions we will ask you:</div>
                 <ul class="bs4-list-group">
-                    <li class="bs4-list-group-item">What is the aim of your project?</li>
-                    <li class="bs4-list-group-item">How many samples do you have?</li>
-                    <li class="bs4-list-group-item">How many replicates are planned?</li>
-                    <li class="bs4-list-group-item">What is your sample type? (e.g. library, DNA/RNA, blood,
-                        stool,...)</li>
-                    <li class="bs4-list-group-item">Which technology should be used? (e.g.
-                        Illumina/Pacbio/Nanopore/10x)</li>
-                    <li class="bs4-list-group-item">How do you plan to apply the sequenced data? (e.g. WGS,
-                        exome,&nbsp;metagenome,...)</li>
-                    <li class="bs4-list-group-item">What is the desired sequencing depth? (coverage or output in
-                        Gb/sample or Mio Reads/sample)</li>
-                    <li class="bs4-list-group-item">Is bioinformatics analysis needed? If yes, to what degree?</li>
+                    <li class="bs4-list-group-item">
+                        What is the aim of your project?
+                    </li>
+                    <li class="bs4-list-group-item">
+                        How many samples do you have?
+                    </li>
+                    <li class="bs4-list-group-item">
+                        How many replicates are planned?
+                    </li>
+                    <li class="bs4-list-group-item">
+                        What is your sample type? (e.g. library, DNA/RNA, blood, stool,...)
+                    </li>
+                    <li class="bs4-list-group-item">
+                        Which technology should be used? (e.g. Illumina/Pacbio/Nanopore/10x)
+                    </li>
+                    <li class="bs4-list-group-item">
+                        How do you plan to apply the sequenced data? (e.g. WGS, exome, metagenome,...)
+                    </li>
+                    <li class="bs4-list-group-item">
+                        What is the desired sequencing depth? (coverage or output in Gb/sample or Mio Reads/sample)
+                    </li>
+                    <li class="bs4-list-group-item">
+                        Is bioinformatics analysis needed? If yes, to what degree?</li>
                 </ul>
             </div>
         </div>
