forgot one li item

--- a/site/start-project.html
+++ b/site/start-project.html
@@ -102,7 +102,8 @@
                         What is the desired sequencing depth? (coverage or output in Gb/sample or Mio Reads/sample)
                     </li>
                     <li class="bs4-list-group-item">
-                        Is bioinformatics analysis needed? If yes, to what degree?</li>
+                        Is bioinformatics analysis needed? If yes, to what degree?
+                    </li>
                 </ul>
             </div>
         </div>
