snippets/media-list.html: ADD template html code for list of media objects
site/our-center.html:

CHANGE OurCenter_CCNnetwork section:
REMOVE list-group structuring of list-elements since images weren't aligned between the list elements
ADD listelements as bootstrap mediaobjects to allow for aligned image and text structure
ADD link to logos for each competence center

CHANGE OurCenter-Institutes section:
REMOVE duplicate class definitions
REFORMATTED and standardized wrappers for each card element

CHANGE OurCenter-Contact section:
REMOVE borders from cards
CHANGE "bs4-img-top" class definition to liferay native "img-top" class to reduce image height and width

custom-bootstrap.css
ADD "bs4-media" class to allow for the creation of media-objects
ADD "bs4-media-body" class to set position of media elements
ADD "bs4-img-fluid" class to create a responsive image container
ADD "bs4-img-thumbnail" class to allow for thumbnail styling of images
ADD "bs4-border-0" class so containers can be set as borderless

--- a/site/our-center.html
+++ b/site/our-center.html
@@ -1,133 +1,106 @@
 <section id="OurCenter_Vision">
   <div class="bs4-container-fluid bs4-slide-panel bs4-col-8 bs4-offset-2">
-    <div class="slide-panel-title bs4-text-left bs4-mb-5 bs4-h1">
+    <div class="bs4-text-left bs4-mb-5 bs4-h1">
       How it started and what we aim for.
     </div>
 
-    <div class="slide-panel-text bs4-text-left">
-      <h3>
-        The NGS Competence Center Tübingen (NCCT) was established in early 2018
-        with the help of DFG (German Research Foundation) funding. Together with
-        three other national centers, we aim at strengthening the use of
-        high-throughput sequencing methods in Germany. The center offers
-        automated high-throughput services and a rich portfolio of sequencing
-        solutions using the latest Illumina and Oxford Nanopore Technologies
-        sequencers. As part of the Quantitative Biology Center (QBiC), NCCT
-        builds on established core facility structures and integrates with the
-        existing infrastructure for data management and bioinformatics support.
-      </h3>
+    <div class="bs4-text-left bs4-h3">
+      The NGS Competence Center Tübingen (NCCT) was established in early 2018
+      with the help of DFG (German Research Foundation) funding. Together with
+      three other national centers, we aim at strengthening the use of
+      high-throughput sequencing methods in Germany. The center offers automated
+      high-throughput services and a rich portfolio of sequencing solutions
+      using the latest Illumina and Oxford Nanopore Technologies sequencers. As
+      part of the Quantitative Biology Center (QBiC), NCCT builds on established
+      core facility structures and integrates with the existing infrastructure
+      for data management and bioinformatics support.
     </div>
   </div>
 </section>
 
-<section id="OurCenter_Institutes">
+<section id="OurCenter-Institutes">
   <div class="bs4-container-fluid">
     <div class="bs4-row">
       <div class="bs4-col-8 bs4-offset-2">
-        <div class="slide-title bs4-text-center bs4-mb-5 bs4-h1">
+        <div class="bs4-text-center bs4-mb-5 bs4-h1">
           The NCCT is a collaborative effort of 3 renowned Institutes in
           Tübingen
         </div>
-
         <div class="bs4-card-deck">
           <div class="bs4-card">
-            <img
-              class="card-img-top bs4-img-thumbnail bs4-img-fluid"
-              src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52096/csm_portrait_olaf_riess_sd_56a65f1bcd.jpg/318d888b-ab50-4ffb-ac06-7d73b97559b2?t=1582111758927"
-            />
+            <img class="bs4-img-thumbnail bs4-img-fluid"
+              src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52096/csm_portrait_olaf_riess_sd_56a65f1bcd.jpg/318d888b-ab50-4ffb-ac06-7d73b97559b2?t=1582111758927" />
             <div class="bs4-card-body bs4-text-left">
               <div class="bs4-card-title bs4-text-center bs4-h5">
-                <a href="http://www.medgen-tuebingen.de/#langsel"
-                  >"Institute of Medical Genetics and Applied Genomics</a
-                >
+                <a href="http://www.medgen-tuebingen.de/#langsel">"Institute of Medical Genetics and Applied
+                  Genomics</a>
               </div>
 
-              <p class="bs4-card-text bs4-text-right bs4-font-italic ">
-                Prof. Olaf Riess, coordinator
-              </p>
+              <div class="bs4-card-text">
+                <p class="bs4-text-right bs4-font-italic ">
+                  Prof. Olaf Riess, coordinator
+                </p>
 
-              <p class="bs4-card-text bs4-font-weight-bold">Contact Person:</p>
-              <a
-                class="bs4-card-text"
-                href="mailto:Nicolas.Casadei@med.uni-tuebingen.de"
-                >Dr. Nicolas Casadei,</a
-              >
+                <p class="bs4-font-weight-bold">Contact Person:</p>
 
-              <p class="bs4-card-text">Head of the Core Facility</p>
+                <p>
+                  <a href="mailto:Nicolas.Casadei@med.uni-tuebingen.de">Dr. Nicolas Casadei,</a>
+                </p>
+
+                <p>Head of the Core Facility</p>
+              </div>
             </div>
           </div>
 
           <div class="bs4-card">
-            <img
-              class="card-img-top bs4-img-thumbnail bs4-img-fluid"
-              src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52096/I-Autenrieth-Archivbild-Verena-Mueller-670941h.jpg/40143d05-a4a1-41a7-9ebb-7f1828ee1093?t=1582111757738"
-            />
+            <img class="bs4-img-thumbnail bs4-img-fluid"
+              src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52096/I-Autenrieth-Archivbild-Verena-Mueller-670941h.jpg/40143d05-a4a1-41a7-9ebb-7f1828ee1093?t=1582111757738" />
             <div class="bs4-card-body bs4-text-left">
-              <h5 class="bs4-card-title bs4-text-center">
+              <div class="bs4-card-title bs4-text-center bs4-h5">
                 <a
-                  href="https://www.medizin.uni-tuebingen.de/de/en/Research/Institutes/Medical+Microbiology+and+Hygiene.html"
-                  >Institute of Medical Microbiology and Hygiene</a
-                >
-              </h5>
+                  href="https://www.medizin.uni-tuebingen.de/de/en/Research/Institutes/Medical+Microbiology+and+Hygiene.html">Institute
+                  of Medical Microbiology and Hygiene</a>
+              </div>
 
-              <p class="bs4-card-text bs4-text-right bs4-font-italic ">
-                Prof. Ingo B. Autenrieth
-              </p>
+              <div class="bs4-card-text">
+                <p class="bs4-text-right bs4-font-italic ">
+                  Prof. Ingo B. Autenrieth
+                </p>
 
-              <p class="bs4-card-text bs4-font-weight-bold">Contact Persons:</p>
-              <a
-                class="bs4-card-text"
-                href="mailto:Angel.Angelov@med.uni-tuebingen.de"
-                >Dr. Angel Angelov,</a
-              >
+                <p class="bs4-font-weight-bold">Contact Persons:</p>
+                <a href="mailto:Angel.Angelov@med.uni-tuebingen.de">Dr. Angel Angelov,</a>
 
-              <p class="bs4-card-text">Lab Manager and Research Scientist</p>
-              <a
-                bs4-card-text=""
-                class="bs4-card-text"
-                href="mailto:Michael.Sonnabend@med.uni-tuebingen.de"
-                >Michael Sonnabend,</a
-              >
+                <p>Lab Manager and Research Scientist</p>
+                <a href="mailto:Michael.Sonnabend@med.uni-tuebingen.de">Michael Sonnabend,</a>
 
-              <p class="bs4-card-text">Coordinator and Research Scientist</p>
+                <p>Coordinator and Research Scientist</p>
+              </div>
             </div>
           </div>
 
           <div class="bs4-card">
-            <img
-              class="card-img-top bs4-img-thumbnail bs4-img-fluid"
-              src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52096/csm_SN_75cdc83d44.jpg/ffa411dd-0beb-4d5e-ac57-855c28b8fd0b?t=1582111758959"
-            />
+            <img class="bs4-img-thumbnail bs4-img-fluid"
+              src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52096/csm_SN_75cdc83d44.jpg/ffa411dd-0beb-4d5e-ac57-855c28b8fd0b?t=1582111758959" />
             <div class="bs4-card-body bs4-text-left">
-              <h5 class="bs4-card-title bs4-text-center">
+              <div class="bs4-card-title bs4-text-center bs4-h5">
                 <a
-                  href="https://uni-tuebingen.de/en/facilities/zentrale-einrichtungen/quantitative-biology-center-qbic.html"
-                  >Quantitative Biology Center(QBiC)</a
-                >
-              </h5>
+                  href="https://uni-tuebingen.de/en/facilities/zentrale-einrichtungen/quantitative-biology-center-qbic.html">Quantitative
+                  Biology Center(QBiC)</a>
+              </div>
 
-              <p class="bs4-card-text bs4-text-right bs4-font-italic ">
-                Dr. Sven Nahnsen
-              </p>
+              <div class="bs4-card-text">
+                <p class="bs4-text-right bs4-font-italic">Dr. Sven Nahnsen</p>
 
-              <p class="bs4-card-text bs4-font-weight-bold">Contact Persons:</p>
-              <a
-                class="bs4-card-text"
-                href="mailto:stefan.czemmel@qbic.uni-tuebingen.de"
-                >Dr. Stefan Czemmel,
-              </a>
+                <p class="bs4-font-weight-bold">Contact Persons:</p>
+                <a href="mailto:stefan.czemmel@qbic.uni-tuebingen.de">Dr. Stefan Czemmel,
+                </a>
 
-              <p class="bs4-card-text">Coordinator Bioinformatics support</p>
-              <a
-                bs4-card-text=""
-                class="bs4-card-text"
-                href="mailto:marie.gauder@qbic.uni-tuebingen.de"
-                >Marie Gauder,
-              </a>
+                <p>Coordinator Bioinformatics support</p>
+                <a href="mailto:marie.gauder@qbic.uni-tuebingen.de">Marie Gauder,
+                </a>
 
-              <p class="bs4-card-text">
-                Project Manager and Bioinformatics Research Scientist
-              </p>
+                <p>Project Manager and Bioinformatics Research Scientist</p>
+              </div>
             </div>
           </div>
         </div>
@@ -137,60 +110,62 @@
 </section>
 
 <section id="OurCenter_CCnetwork">
-  <div class="bs4-container-fluid slide-panel bs4-col-8 bs4-offset-2">
-    <div class="slide-panel-content">
-      <h1 class="slide-panel-title bs4-text-center bs4-mb-5">
+  <div class="bs4-container-fluid bs4-col-8 bs4-offset-2">
+    <div>
+      <div class="bs4-text-center bs4-mb-5 bs4-h1">
         We are integrated in a network of national competence centers, selected
         by the DFG.
-      </h1>
+      </div>
 
-      <div class="slide-panel-text bs4-text-center">
-        <div class="bs4-list-group bs4-list-group-flush">
-          <a
-            class="bs4-list-group-item bs4-list-group-item-action bs4-h5"
-            href="https://www.wggc.uni-bonn.de/en"
-            >WEST GERMAN GENOME CENTER</a
-          >
-          <a
-            class="bs4-list-group-item bs4-list-group-item-action bs4-h5"
-            href="https://genomecenter.tu-dresden.de/about-us"
-            >DRESDEN-CONCEPT GENOME CENTER</a
-          >
-          <a
-            class="bs4-list-group-item bs4-list-group-item-action bs4-h5"
-            href="https://www.ccga.uni-kiel.de/landing_page/about_us"
-            >COMPETENCE CENTRE FOR GENOMIC ANALYSIS KIEL</a
-          >
-        </div>
+      <div class="bs4-text-center">
+        <ul class="bs4-list-unstyled">
+          <li class="bs4-media bs4-align-items-center bs4-justify-content-center bs4-my-5">
+            <img alt="Generic placeholder image"
+              src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/WGGC+Bonn.png/3fc5a0f6-fe78-49f4-9232-1828bdf7f991?t=1582536944647" />
+            <div class="bs4-media-body bs4-h5" style=" max-width:500px;">
+              <a href="https://www.wggc.uni-bonn.de/en">WEST GERMAN GENOME CENTER</a>
+            </div>
+          </li>
+          <li class="bs4-media bs4-align-items-center bs4-justify-content-center bs4-my-5">
+            <img alt="Generic placeholder image"
+              src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/dresdenconcept.png/6cfe2b0b-fde1-44cd-9803-bd7310ec6e38?t=1582536944527" />
+            <div class="bs4-media-body bs4-h5" style=" max-width:500px;">
+              <a href="https://genomecenter.tu-dresden.de/about-us">DRESDEN-CONCEPT GENOME CENTER</a>
+            </div>
+          </li>
+          <li class="bs4-media bs4-align-items-center bs4-justify-content-center bs4-my-5">
+            <img alt="Generic placeholder image"
+              src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/54224/CCGA_Logo.png/e203b88d-dc73-458c-b045-e67bfd31e0d2?t=1582536943910" />
+            <div class="bs4-media-body bs4-h5" style=" max-width:500px;">
+              <a href="https://www.ccga.uni-kiel.de/landing_page/about_us">COMPETENCE CENTRE FOR GENOMIC ANALYSIS
+                KIEL</a>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
 </section>
 
-<section id="OurCenter_Contact">
+< <section id="OurCenter-Contact">
   <div class="bs4-container-fluid bs4-justify-content-center">
     <div class="bs4-row">
       <div class="bs4-col-8 bs4-offset-2">
-        <div class="slide-title bs4-text-center bs4-mb-5 bs4-h1">
+        <div class="bs4-text-center bs4-mb-5 bs4-h1">
           We'd love to hear from you!
         </div>
-
-        <div class="slide-subtitle bs4-text-center bs4-mb-5 bs4-h3">
+        <div class="bs4-text-center bs4-mb-5 bs4-h3">
           Just send us an email or use one of the other channels presented here:
         </div>
-
         <div class="bs4-card-deck bs4-text-center">
           <div class="bs4-card bs4-border-0">
             <div class="bs4-card-body">
-              <img
-                alt="Address"
-                class="bs4-card-img"
-                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52483/contact-us-address.png/9ddad1cd-71b3-48a4-b017-bf71d249b8ad?t=1582036769803"
-              />
-              <div class="bs4-card-textbox">
+              <img alt="Address" class="img-top bs4-img-thumbnail"
+                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52483/contact-us-address.png/7b13ad9a-a287-4900-a46e-be149ebc8c19?t=1582555165611" />
+              <div class="bs4-card-textbox bs4-mt-3">
                 <div class="bs4-card-title bs4-h4">Address</div>
 
-                <p class="bs4-card-text">
+                <p class="bs4-card-text bs4-h6">
                   NGS Competence Center Tübingen<br />
                   Calwerstraße 7, 72076 Tübingen.
                 </p>
@@ -200,21 +175,15 @@
 
           <div class="bs4-card bs4-border-0">
             <div class="bs4-card-body">
-              <img
-                alt="Email"
-                class="card-img"
-                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52483/contact-us-email.png/388ce894-7ceb-4db9-9dae-3dff0bbf9fe9?t=1582036771153"
-              />
-              <div class="bs4-card-textbox">
+              <img alt="Email" class="img-top bs4-img-thumbnail"
+                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52483/contact-us-email.png/be3150fe-1b7c-4a60-866c-faba396c32a9?t=1582555165334" />
+              <div class="bs4-card-textbox bs4-mt-3">
                 <div class="bs4-card-title bs4-h4">E-Mail</div>
 
                 <div class="bs4-card-subtitle bs4-h6 mb-2">
-                  <a
-                    href="mailto:
-
-ncct@med.uni-tuebingen.de"
-                    >ncct@med.uni-tuebingen.de</a
-                  >
+                  <a href="mailto:
+    
+    ncct@med.uni-tuebingen.de">ncct@med.uni-tuebingen.de</a>
                 </div>
               </div>
             </div>
@@ -222,15 +191,12 @@ ncct@med.uni-tuebingen.de"
 
           <div class="bs4-card bs4-border-0">
             <div class="bs4-card-body">
-              <img
-                alt="Phone"
-                class="card-img"
-                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52483/contact-us-phone.png/2652295c-2804-4a0f-82c2-ba671cabed2f?t=1582036771129"
-              />
-              <div class="bs4-card-textbox">
+              <img alt="Phone" class="img-top bs4-img-thumbnail"
+                src="https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52483/contact-us-phone.png/d12edc10-dff5-432a-97ed-e5529583a5ba?t=1582555165420" />
+              <div class="bs4-card-textbox bs4-mt-3">
                 <div class="bs4-card-title bs4-h4">Phone and Fax</div>
 
-                <p class="bs4-card-text">
+                <p class="bs4-card-text bs4-h6">
                   Telephone: +49 7071/29-72298<br />
                   Fax: +49 7071/29-4811
                 </p>
@@ -241,4 +207,4 @@ ncct@med.uni-tuebingen.de"
       </div>
     </div>
   </div>
-</section>
+  </section>
